development home at https://github.com/projectestac/agora_nodes

Changes in progress
---------------------------------------------------------------------------------------
- Forbidden access to admin-tools and edit-comments for Colaborator user roles



Changes 15.05.19
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.0.5
- CSV: Included first version of the import-users-from-csv-with-meta plugin. #95
- If user is not logged in, redirects at login screen on BuddyPress tabs 
- Solved categories error on breadcrumbs #2
- Disabled gravatar requests. #122
- PhpInfo for xtecadmins.
- Avoid upload large images (>2MB).
- Hide full size option post insertion (maximum size width 1024)
- Slideshow: Added proportional mode
- Added proxy support
- Giny Enllaços educatius: added 'ePergam', 'La meva XTEC' and bug fix #111
- Added constant SCHOOL_CODE 
- Added shortcode to embed rss into post and page
- Added author link in metadata author post
- Added 'myposts' functions to replace Social Articles
- Added script to massive upgrade of WordPress (script_upgrade.class.php)
- Added Docs page to visibility widget params.
- Empty categories showed also in visibility widget.  #103
- Hidden some categories for contributor role (Tools, Google Calendar and Comments). #115
- Reviewed comments translation. #118
- Fixed bug to let users edit its forum messages during specific time interval. #120


Changes 15.03.20
---------------------------------------------------------------------------------------
- Set user priority on the boxes
- Hidden unnecessary boxes
- Added external links for Google Fonts
- Sets the order and the position for the boxes
- GCE: Added default values for hidden parameters and remove some metaboxes to simplify user experience
- GCE: Fixed warning message in list of calendars
- MU-PLUGIN: Created common-functions.php pluggin to include common functions which are not related only with the theme